update: Improve layout

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -29,7 +29,7 @@
       </ul>
     </nz-sider>
     <nz-layout style="overflow: hidden auto">
-      <nz-content style="padding: 8px">
+      <nz-content>
         <router-outlet></router-outlet>
       </nz-content>
     </nz-layout>
