--- a/src/app/index/overview/overview.component.html
+++ b/src/app/index/overview/overview.component.html
@@ -42,7 +42,7 @@
   </nz-page-header-footer>
 </nz-page-header>
 
-<nz-content style="overflow: hidden auto; margin-top: 8px" [ngSwitch]="tabIndex">
+<nz-content style="overflow: hidden auto; padding: 8px" [ngSwitch]="tabIndex">
   <ng-container *ngSwitchCase="0">
     <nz-alert
       nzBanner
