--- a/src/common/components/page/blank-page.component.html
+++ b/src/common/components/page/blank-page.component.html
@@ -3,7 +3,7 @@
     <nz-row nzJustify="space-between" nzAlign="middle">
       <nz-col>
         <button nz-button nzType="text" (click)="star()">
-          <span nz-icon nzType="github" nzTheme="outline"></span>
+          <span nz-icon nzType="github"></span>
           Star
         </button>
       </nz-col>
@@ -16,14 +16,10 @@
   </nz-content>
   <nz-footer>
     <nz-space nzDirection="vertical" nzSize="small">
-      <ng-container *nzSpaceItem>
-        <span nz-typography>BSD-3-Clause License</span>
-      </ng-container>
-      <ng-container *nzSpaceItem>
-        <span nz-typography>
-          Copyright <span nz-icon nzType="copyright" nzTheme="outline"></span> 2024. Open Source DevOps by WEPLANX.
-        </span>
-      </ng-container>
+      <span *nzSpaceItem nz-typography>BSD-3-Clause License</span>
+      <span *nzSpaceItem nz-typography>
+        Copyright <span nz-icon nzType="copyright"></span> 2024. Open Source DevOps by WEPLANX.
+      </span>
     </nz-space>
   </nz-footer>
 </nz-layout>
