--- a/src/app/index/queues/queues.component.html
+++ b/src/app/index/queues/queues.component.html
@@ -4,9 +4,9 @@
       *nzSpaceItem
       [wpxWidth]="320"
       [wpxModel]="model"
-      [wpxKeys]="['name', 'namespace']"
+      [wpxKeys]="['name']"
       (wpxSubmit)="getData()"
-      wpxPlaceholder="Name, Namespace"
+      wpxPlaceholder="Name"
     ></wpx-keyword>
     <wpx-toolbox *nzSpaceItem [wpxModel]="model" (wpxClear)="getData()" (wpxRefresh)="getData()"> </wpx-toolbox>
   </nz-space>
@@ -16,7 +16,7 @@
   <nz-space nzAlign="center">
     @if (model.selection.size; as size) {
       <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu">
-        {{ size }} items selected
+        {{ size }} selected items
       </button>
       <nz-dropdown-menu #menu="nzDropdownMenu">
         <ul nz-menu>
@@ -25,6 +25,7 @@
         </ul>
       </nz-dropdown-menu>
     }
+    <button *nzSpaceItem nz-button (click)="openPublish()"> Publish </button>
     <button *nzSpaceItem nz-button nzType="primary" (click)="openForm()"> Create </button>
   </nz-space>
 </ng-template>
@@ -36,14 +37,21 @@
   [wpxModel]="model"
   [wpxColumns]="[
     {
-      title: 'Name',
+      title: 'Queue Name',
       key: 'name',
-      width: '360px',
+      width: '240px',
       render: name
+    },
+    {
+      title: 'Subjects',
+      key: 'subjects',
+      width: '240px',
+      render: subjects
     },
     {
       title: 'Detail',
       key: 'detail',
+      width: '600px',
       render: detail
     }
   ]"
@@ -51,51 +59,30 @@
   (wpxChange)="getData()"
 >
   <ng-template #name let-data>
-    <nz-tag nzColor="blue">
-      @switch (data.kind) {
-        @case ('standard') {
-          Standard
-        }
-        @case ('cms') {
-          Headless CMS
-        }
-      }
-    </nz-tag>
-    <a [routerLink]="['/x', data.namespace]">{{ data.name }} [{{ data.namespace }}]</a>
+    {{ data.name }}
+    @if (data.description) {
+      <span nz-icon nzType="question-circle" nzTheme="outline" [nz-tooltip]="data.description"></span>
+    }
+  </ng-template>
+  <ng-template #subjects let-data>
+    @if (data.subjects.length > 1) {
+      {{ data.subjects[0] }}
+      <span nz-icon nzType="info-circle" nzTheme="outline" [nz-tooltip]="data.subjects"></span>
+    } @else {
+      {{ data.subjects }}
+    }
   </ng-template>
   <ng-template #detail let-data>
-    <nz-tag>
-      <span nz-icon nzType="field-time" nzTheme="outline"></span>
-      @if (data.expire) {
-        Expire in {{ data.expire | date: 'longDate' }}
-      } @else {
-        Long
-      }
-    </nz-tag>
-    <nz-tag>
-      <span nz-icon nzType="cluster"></span>
-      @if (data.cluster && clusterDict[data.cluster]) {
-        {{ clusterDict[data.cluster].name }}
-      } @else {
-        Not Connected
-      }
-    </nz-tag>
-    <nz-tag>
-      <span nz-icon [nzType]="data.nats === '*' ? 'check-circle' : 'close-circle'"></span>
-      Nats
-    </nz-tag>
-    <nz-tag>
-      <span nz-icon [nzType]="'close-circle'"></span>
-      Redis
-    </nz-tag>
-    <a (click)="openAuthorization(data)">
-      @if (data.secret_id && data.secret_key) {
-        <span nz-icon nzType="info-circle" nzTheme="outline"></span>
-        <span> There are {{ !data.entry ? 0 : data.entry.length }} restrictions</span>
-      } @else {
-        Not Set
-      }
-    </a>
+    @if (data.max_msgs && data.max_msgs !== -1) {
+      <nz-tag> Max Msgs: {{ data.max_msgs }} </nz-tag>
+    }
+    @if (data.max_bytes && data.max_bytes !== -1) {
+      <nz-tag> Max Bytes: {{ data.max_bytes | nzBytes }} </nz-tag>
+    }
+    @if (data.max_age) {
+      <nz-tag> Max Age: {{ data.max_age / 1e9 }}s </nz-tag>
+    }
+    <a (click)="openDetail(data)">View Details</a>
   </ng-template>
 </wpx-table>
 
