--- a/src/app/index/workflows/workflows.component.html
+++ b/src/app/index/workflows/workflows.component.html
@@ -16,7 +16,7 @@
   <nz-space nzAlign="center">
     @if (model.selection.size; as size) {
       <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu">
-        {{ size }} items selected
+        {{ size }} selected items
       </button>
       <nz-dropdown-menu #menu="nzDropdownMenu">
         <ul nz-menu>
@@ -53,49 +53,42 @@
   <ng-template #name let-data>
     <nz-tag nzColor="blue">
       @switch (data.kind) {
-        @case ('standard') {
-          Standard
-        }
-        @case ('cms') {
-          Headless CMS
+        @case ('schedule') {
+          Schedule
         }
       }
     </nz-tag>
-    <a [routerLink]="['/x', data.namespace]">{{ data.name }} [{{ data.namespace }}]</a>
+    {{ data.name }}
   </ng-template>
   <ng-template #detail let-data>
-    <nz-tag>
-      <span nz-icon nzType="field-time" nzTheme="outline"></span>
-      @if (data.expire) {
-        Expire in {{ data.expire | date: 'longDate' }}
-      } @else {
-        Long
+    @switch (data.kind) {
+      @case ('schedule') {
+        @if (data.schedule; as schedule) {
+          @if (!schedule.status) {
+            <nz-tag nzColor="error">
+              <span nz-icon nzType="stop"></span>
+              <span>Disabled</span>
+            </nz-tag>
+          }
+          <nz-tag>
+            <span nz-icon nzType="deployment-unit" nzTheme="outline"></span>
+            @if (endpointDict[schedule.ref]; as endpoint) {
+              {{ endpoint.name }}
+            }
+          </nz-tag>
+          <nz-tag>
+            <span nz-icon nzType="key" nzTheme="outline"></span>
+            {{ data._id }}
+          </nz-tag>
+          <a (click)="openControl(data, 0)"> There are {{ schedule.jobs.length }} events </a>
+        } @else {
+          <a (click)="openControl(data, 1)">
+            <span nz-icon nzType="info-circle" nzTheme="outline"></span>
+            Please initialize the event
+          </a>
+        }
       }
-    </nz-tag>
-    <nz-tag>
-      <span nz-icon nzType="cluster"></span>
-      @if (data.cluster && clusterDict[data.cluster]) {
-        {{ clusterDict[data.cluster].name }}
-      } @else {
-        Not Connected
-      }
-    </nz-tag>
-    <nz-tag>
-      <span nz-icon [nzType]="data.nats === '*' ? 'check-circle' : 'close-circle'"></span>
-      Nats
-    </nz-tag>
-    <nz-tag>
-      <span nz-icon [nzType]="'close-circle'"></span>
-      Redis
-    </nz-tag>
-    <a (click)="openAuthorization(data)">
-      @if (data.secret_id && data.secret_key) {
-        <span nz-icon nzType="info-circle" nzTheme="outline"></span>
-        <span> There are {{ !data.entry ? 0 : data.entry.length }} restrictions</span>
-      } @else {
-        Not Set
-      }
-    </a>
+    }
   </ng-template>
 </wpx-table>
 
