--- a/src/app/admin/integrated/collaboration/collaboration.component.html
+++ b/src/app/admin/integrated/collaboration/collaboration.component.html
@@ -1,7 +1,7 @@
 <nz-card>
   <nz-row style="padding-bottom: 12px" nzJustify="space-between">
     <nz-col>
-      <img style="height: 90px" [src]="['assets', 'Lark-logo.svg'] | wpxAssets" alt="" />
+      <img style="height: 90px" [ngSrc]="['assets', 'Lark-logo.svg'] | wpxAssets" alt="" />
     </nz-col>
     <nz-col></nz-col>
     <nz-col></nz-col>
