--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'ng-zorro-antd/ng-zorro-antd.less';
+@import 'ng-zorro-antd/ng-zorro-antd.aliyun.less';
+
+nz-header.nav {
+  height: 64px;
+  line-height: 64px;
+  padding: 0 12px;
+  background: #fff;
+  border-bottom: 1px solid #f0f0f0;
+}
