--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -4,10 +4,7 @@
       <nz-col>
         <ul class="navigation" nz-menu nzMode="horizontal">
           <li nz-menu-item nzSelected>
-            <a [routerLink]="['/jobs']">
-              <nz-icon nzType="schedule" />
-              Cron Jobs
-            </a>
+            <a [routerLink]="['/jobs']"> Cron Jobs </a>
           </li>
         </ul>
       </nz-col>
