--- a/src/app/__layout/layout.less
+++ b/src/app/__layout/layout.less
@@ -1,8 +1,9 @@
 @header-space-width: 500px;
+@header-height: 64px;
 
 nz-header {
-  height: 50px;
-  line-height: 50px;
+  height: @header-height;
+  line-height: @header-height;
   padding: 0;
   background: #fff;
   border-bottom: 1px solid #f0f0f0;
@@ -13,5 +14,6 @@ nz-header {
   margin-top: -2px;
   li {
     font-weight: 500;
+    font-size: 15px;
   }
 }
