--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,8 +1,5 @@
-<!-- 背景层 -->
-<div class="login-bg">
-  <div class="bg-gradient"></div>
-  <div class="bg-pattern"></div>
-</div>
+<!-- Canvas 粒子背景 -->
+<canvas class="particles-canvas" #particlesCanvas></canvas>
 
 <!-- 主容器 -->
 <div class="login-container">
@@ -11,11 +8,11 @@
     <div class="brand-content">
       <div class="brand-logo">
         <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect width="48" height="48" fill="white" fill-opacity="0.15"/>
-          <path d="M12 12H22V22H12V12Z" fill="white"/>
-          <path d="M26 12H36V22H26V12Z" fill="white" fill-opacity="0.6"/>
-          <path d="M12 26H22V36H12V26Z" fill="white" fill-opacity="0.6"/>
-          <path d="M26 26H36V36H26V26Z" fill="white" fill-opacity="0.3"/>
+          <rect width="48" height="48" fill="#1890ff" fill-opacity="0.1"/>
+          <path d="M12 12H22V22H12V12Z" fill="#1890ff"/>
+          <path d="M26 12H36V22H26V12Z" fill="#1890ff" fill-opacity="0.6"/>
+          <path d="M12 26H22V36H12V26Z" fill="#1890ff" fill-opacity="0.6"/>
+          <path d="M26 26H36V36H26V26Z" fill="#1890ff" fill-opacity="0.3"/>
         </svg>
       </div>
       <h1 class="brand-title">Litho</h1>
@@ -46,47 +43,131 @@
         <p class="login-subtitle">请登录您的账户以继续</p>
       </div>
 
-      <!-- 登录表单 -->
-      <form nz-form nzLayout="vertical" [formGroup]="form" (appSubmit)="submit($event)" class="login-form">
-        <!-- 邮箱 -->
-        <nz-form-item>
-          <nz-form-label nzRequired>邮箱地址</nz-form-label>
-          <nz-form-control nzErrorTip="请输入有效的电子邮箱地址">
-            <nz-input-group nzPrefixIcon="mail">
-              <input type="email" nz-input formControlName="email" placeholder="name@company.com" autocomplete="email" />
-            </nz-input-group>
-          </nz-form-control>
-        </nz-form-item>
+      <!-- 登录方式切换 -->
+      <div class="login-tabs">
+        <div
+          class="login-tab"
+          [class.active]="loginMode === 'email'"
+          (click)="switchLoginMode('email')"
+        >
+          <span nz-icon nzType="mail" nzTheme="outline"></span>
+          邮箱登录
+        </div>
+        <div
+          class="login-tab"
+          [class.active]="loginMode === 'sms'"
+          (click)="switchLoginMode('sms')"
+        >
+          <span nz-icon nzType="mobile" nzTheme="outline"></span>
+          短信登录
+        </div>
+      </div>
 
-        <!-- 密码 -->
-        <nz-form-item>
-          <nz-form-label nzRequired>密码</nz-form-label>
-          <nz-form-control nzErrorTip="请输入您的密码">
-            <nz-input-group nzPrefixIcon="lock">
-              <input type="password" nz-input formControlName="password" placeholder="请输入密码" autocomplete="current-password" />
-            </nz-input-group>
-          </nz-form-control>
-        </nz-form-item>
+      <!-- 邮箱登录表单 -->
+      @if (loginMode === 'email') {
+        <form nz-form nzLayout="vertical" [formGroup]="emailForm" (appSubmit)="submitEmail($event)" class="login-form">
+          <!-- 邮箱 -->
+          <nz-form-item>
+            <nz-form-label nzRequired>邮箱地址</nz-form-label>
+            <nz-form-control nzErrorTip="请输入有效的电子邮箱地址">
+              <nz-input-group nzPrefixIcon="mail">
+                <input type="email" nz-input formControlName="email" placeholder="name@company.com" autocomplete="email" />
+              </nz-input-group>
+            </nz-form-control>
+          </nz-form-item>
 
-        <!-- 记住我 和 忘记密码 -->
-        <nz-form-item class="options-item">
-          <nz-form-control>
-            <div class="login-options">
-              <label nz-checkbox formControlName="remember">记住我</label>
-              <a class="forgot-link">忘记密码?</a>
-            </div>
-          </nz-form-control>
-        </nz-form-item>
+          <!-- 密码 -->
+          <nz-form-item>
+            <nz-form-label nzRequired>密码</nz-form-label>
+            <nz-form-control nzErrorTip="请输入您的密码">
+              <nz-input-group nzPrefixIcon="lock">
+                <input type="password" nz-input formControlName="password" placeholder="请输入密码" autocomplete="current-password" />
+              </nz-input-group>
+            </nz-form-control>
+          </nz-form-item>
 
-        <!-- 登录按钮 -->
-        <nz-form-item class="submit-item">
-          <nz-form-control>
-            <button nz-button nzType="primary" nzBlock [nzLoading]="loading" [disabled]="!form.valid">
-              登录
-            </button>
-          </nz-form-control>
-        </nz-form-item>
-      </form>
+          <!-- 记住我 和 忘记密码 -->
+          <nz-form-item class="options-item">
+            <nz-form-control>
+              <div class="login-options">
+                <label nz-checkbox formControlName="remember">记住我</label>
+                <a class="forgot-link">忘记密码?</a>
+              </div>
+            </nz-form-control>
+          </nz-form-item>
+
+          <!-- 登录按钮 -->
+          <nz-form-item class="submit-item">
+            <nz-form-control>
+              <button nz-button nzType="primary" nzBlock [nzLoading]="loading" [disabled]="!emailForm.valid">
+                登录
+              </button>
+            </nz-form-control>
+          </nz-form-item>
+        </form>
+      }
+
+      <!-- 短信登录表单 -->
+      @if (loginMode === 'sms') {
+        <form nz-form nzLayout="vertical" [formGroup]="smsForm" (appSubmit)="submitSms($event)" class="login-form">
+          <!-- 手机号 -->
+          <nz-form-item>
+            <nz-form-label nzRequired>手机号码</nz-form-label>
+            <nz-form-control nzErrorTip="请输入有效的手机号码">
+              <nz-input-group nzPrefixIcon="mobile" [nzAddOnBefore]="prefixTemplate">
+                <input nz-input formControlName="phone" placeholder="请输入手机号" autocomplete="tel" />
+              </nz-input-group>
+              <ng-template #prefixTemplate>
+                <nz-select formControlName="phonePrefix" style="width: 80px;">
+                  <nz-option nzLabel="+86" nzValue="+86"></nz-option>
+                  <nz-option nzLabel="+852" nzValue="+852"></nz-option>
+                  <nz-option nzLabel="+853" nzValue="+853"></nz-option>
+                  <nz-option nzLabel="+886" nzValue="+886"></nz-option>
+                </nz-select>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+
+          <!-- 验证码 -->
+          <nz-form-item>
+            <nz-form-label nzRequired>验证码</nz-form-label>
+            <nz-form-control nzErrorTip="请输入验证码">
+              <nz-input-group nzPrefixIcon="safety" [nzSuffix]="codeSuffix">
+                <input nz-input formControlName="code" placeholder="请输入验证码" maxlength="6" />
+              </nz-input-group>
+              <ng-template #codeSuffix>
+                <button
+                  nz-button
+                  nzType="link"
+                  [disabled]="countdown > 0 || !smsForm.get('phone')?.valid"
+                  (click)="sendCode($event)"
+                  class="send-code-btn"
+                >
+                  {{ countdown > 0 ? countdown + 's 后重发' : '获取验证码' }}
+                </button>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+
+          <!-- 记住我 -->
+          <nz-form-item class="options-item">
+            <nz-form-control>
+              <div class="login-options">
+                <label nz-checkbox formControlName="remember">记住我</label>
+              </div>
+            </nz-form-control>
+          </nz-form-item>
+
+          <!-- 登录按钮 -->
+          <nz-form-item class="submit-item">
+            <nz-form-control>
+              <button nz-button nzType="primary" nzBlock [nzLoading]="loading" [disabled]="!smsForm.valid">
+                登录
+              </button>
+            </nz-form-control>
+          </nz-form-item>
+        </form>
+      }
 
       <!-- SSO 登录 -->
       <div class="login-sso">
