--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -42,7 +42,44 @@
         </ul>
       </nz-col>
       <nz-col> </nz-col>
-      <nz-col> </nz-col>
+      <nz-col>
+        <div class="header-right">
+          <!-- 消息通知 -->
+          <button nz-button nzType="text" nz-tooltip nzTooltipTitle="消息通知" class="header-btn">
+            <nz-badge [nzCount]="5" nzSize="small">
+              <span nz-icon nzType="bell" nzTheme="outline"></span>
+            </nz-badge>
+          </button>
+
+          <!-- 用户头像和用户名 -->
+          <nz-dropdown-menu #userMenu="nzDropdownMenu">
+            <ul nz-menu>
+              <li nz-menu-item>
+                <span nz-icon nzType="user" nzTheme="outline"></span>
+                个人中心
+              </li>
+              <li nz-menu-item>
+                <span nz-icon nzType="setting" nzTheme="outline"></span>
+                账户设置
+              </li>
+              <li nz-menu-divider></li>
+              <li nz-menu-item nzDanger>
+                <span nz-icon nzType="logout" nzTheme="outline"></span>
+                退出登录
+              </li>
+            </ul>
+          </nz-dropdown-menu>
+          <div class="user-info" nz-dropdown [nzDropdownMenu]="userMenu" nzTrigger="click">
+            <nz-avatar nzSize="small">
+              <span nz-icon nzType="user" nzTheme="outline"></span>
+            </nz-avatar>
+            <span class="username">用户</span>
+            <span nz-icon nzType="down" nzTheme="outline"></span>
+          </div>
+        </div>
+
+
+      </nz-col>
     </nz-row>
   </nz-header>
 
