--- a/src/app/__layout/layout.less
+++ b/src/app/__layout/layout.less
@@ -41,13 +41,7 @@ nz-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    padding: 0 12px;
-    border-radius: 0;
-
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.02);
-    }
+    padding: 8px;
   }
 
   .user-info {
