feat: remove analytics page and update settings layout with new menu structure

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,2 +1,8 @@
 @import 'ng-zorro-antd/ng-zorro-antd.less';
 @import 'ng-zorro-antd/ng-zorro-antd.aliyun.less';
+
+.inner-layout {
+  height: 100%;
+  padding: 12px 0;
+  background: #fff;
+}
