--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -1,6 +1,57 @@
 <app-layout>
-  <div class="settings-container">
-    <h2>系统设置</h2>
-    <p>系统配置与管理功能</p>
-  </div>
+  <nz-layout class="inner-layout">
+    <nz-sider nzWidth="200px" nzTheme="light">
+      <ul style="height: 100%" nz-menu nzMode="inline" class="sider-menu">
+        <li nz-menu-group nzTitle="通用">
+          <ul>
+            <li nz-menu-item>
+              <nz-icon nzType="apartment"></nz-icon>
+              <a>组织</a>
+            </li>
+            <li nz-menu-item>
+              <nz-icon nzType="partition"></nz-icon>
+              <a>权限组</a>
+            </li>
+            <li nz-menu-item>
+              <nz-icon nzType="user"></nz-icon>
+              <a>企业成员</a>
+            </li>
+          </ul>
+        </li>
+        <li nz-menu-group nzTitle="访问控制">
+          <ul>
+            <li nz-menu-item>
+              <nz-icon nzType="api"></nz-icon>
+              <a>资源控制</a>
+            </li>
+            <li nz-menu-item>
+              <nz-icon nzType="layout"></nz-icon>
+              <a>视图控制</a>
+            </li>
+            <li nz-menu-item>
+              <nz-icon nzType="switcher"></nz-icon>
+              <a>策略组</a>
+            </li>
+          </ul>
+        </li>
+        <li nz-menu-group nzTitle="审计日志">
+          <ul>
+            <li nz-menu-item>
+              <nz-icon nzType="rocket"></nz-icon>
+              <a>在线会话</a>
+            </li>
+            <li nz-menu-item>
+              <nz-icon nzType="audit"></nz-icon>
+              <a>登录状态</a>
+            </li>
+            <li nz-menu-item>
+              <nz-icon nzType="file-search"></nz-icon>
+              <a>操作行为</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nz-sider>
+    <nz-content style="padding: 12px">Content</nz-content>
+  </nz-layout>
 </app-layout>
